Solve Windows dependencies.
Shwapi.lib for path API and Windows version updated to 7 to
allow extended API.

--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -57,6 +57,10 @@ version.h
 #)
 
 #target_include_directories()
-#target_link_libraries()
+
+target_link_libraries(nssm
+Shlwapi.lib
+)
+
 #target_link_directories()
 
